# dbt-autofix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PLAN.md  README.md  investigate-dbt1013.md  notes.md  noxfile.py  pdm_build.py  pyproject.toml
.claude/skills/add-integration-test/: SKILL.md  deprecations-reference.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cache-dependencies.yml  check-pypi-release.yml  nox-pr.yml  pytest-pr.yml  release.yml  schedule.yml
dbt_autofix/: deprecations.py  fields_properties_configs.py  hub_packages.py  main.py  package_upgrade.py  packages.py  pyproject.toml  refactor.py  retrieve_schemas.py  semantic_definitions.py
dbt_autofix/refactors/: constants.py
dbt_autofix/refactors/changesets/: dbt_project_yml.py  dbt_schema_yml.py  dbt_schema_yml_semantic_layer.py  dbt_sql.py
dbt_autofix/src/dbt_autofix/: __init__.py
dbt_fusion_package_tools/: pyproject.toml
docs/: deprecations.md  pre-commit-dependency-resolution.md
pre_commit_hooks/: check_deprecations.py
src/dbt_autofix/: _jinja_environment.py  dbt_api.py  deprecations.py  duplicate_keys.py  fields_properties_configs.py  function_support.py  jinja.py  main.py  manifest_reader.py  package_upgrade.py  refactor.py  sao.py  semantic_definitions.py  sql_function_extractor.py  static_analysis_report.py  static_analysis_writer.py  verify_locations.py
src/dbt_autofix/data/: snowflake-functions-bundled.json
src/dbt_autofix/refactors/: constants.py  node.py  results.py  static_analysis.py  yml.py
src/dbt_autofix/refactors/changesets/: dbt_project_yml.py  dbt_python.py  dbt_schema_yml.py  dbt_schema_yml_semantic_layer.py  dbt_sql.py  dbt_sql_improved.py  resource_references.py  sao_sql.py  sao_yml.py
tests/e2e_tests/: test_cli.py  test_dbt_core.py  test_pre_commit.py  test_wheel.py  wheel_helpers.py
tests/integration_tests/: test_full_dbt_projects.py  test_fusion_static_analysis.py
tests/integration_tests/dbt_projects/: .gitignore  project1_expected.stdout  project2_expected.stdout  project_behavior_changes_expected.stdout  project_config_quoted_strings_expected.stdout  project_custom_key_in_config_expected.stdout  project_dbtignore_expected.stdout  project_exclude_dbt_project_keys_expected.stdout  project_issue_220_expected.stdout  project_jinja_templates_expected.stdout  project_missing_coverage_expected.stdout  project_nested_quotes_in_config_expected.stdout  project_python_models_expected.stdout  project_resource_references_expected.stdout  project_semantic_layer_expected.stdout  project_snowflake_warehouse_config_expected.stdout  project_static_analysis_expected.stdout  project_tests_to_data_tests_expected.stdout  project_unexpected_jinja_block_expected.stdout  project_yaml_tags_indentation_expected.stdout
tests/integration_tests/dbt_projects/project1/: dbt_project.yml
tests/integration_tests/dbt_projects/project1_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_behavior_changes/: dbt_project.yml
tests/integration_tests/dbt_projects/project_behavior_changes_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_config_quoted_strings/: dbt_project.yml
tests/integration_tests/dbt_projects/project_config_quoted_strings_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_custom_key_in_config/: dbt_project.yml
tests/integration_tests/dbt_projects/project_custom_key_in_config_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_dbtignore/: dbt_project.yml
tests/integration_tests/dbt_projects/project_dbtignore_expected/: .dbtignore  dbt_project.yml
tests/integration_tests/dbt_projects/project_exclude_dbt_project_keys/: dbt_project.yml
tests/integration_tests/dbt_projects/project_exclude_dbt_project_keys_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_issue_220/: dbt_project.yml
tests/integration_tests/dbt_projects/project_issue_220_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_jinja_templates/: dbt_project.yml
tests/integration_tests/dbt_projects/project_missing_coverage/: dbt_project.yml
tests/integration_tests/dbt_projects/project_missing_coverage_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_nested_quotes_in_config/: dbt_project.yml
tests/integration_tests/dbt_projects/project_nested_quotes_in_config_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_python_models/: dbt_project.yml
tests/integration_tests/dbt_projects/project_python_models_expected/: .gitignore  dbt_project.yml
tests/integration_tests/dbt_projects/project_resource_references/: dbt_project.yml
tests/integration_tests/dbt_projects/project_semantic_layer_expected/: dbt_project.yml
tests/integration_tests/dbt_projects/project_snowflake_warehouse_config/: dbt_project.yml
tests/unit_tests/: test_check_deprecations.py  test_comment_preservation.py  test_config_meta_autofix.py  test_dbt_api.py  test_dbt_project_prefix_plus.py  test_dbt_python.py  test_dict_config_subkeys.py  test_duplicate_keys.py  test_fix_space_after_plus.py  test_function_support.py  test_jinja.py  test_jinja_environment.py  test_manifest_reader.py  test_package_upgrade.py  test_project_yaml_cache.py  test_python_meta_autofix.py  test_rec_check_yaml_path.py  test_refactor.py  test_sao.py  test_serialize_config.py  test_sql_function_extractor.py  test_static_analysis.py  test_static_analysis_report.py  test_static_analysis_writer.py  test_yml_helpers.py
tests/unit_tests/dbt-autofix-jinja/: test_jinja.py  test_jinja_environment.py
tests/unit_tests/package_upgrades/: test_check_parse_conformance.py  test_dbt_package.py  test_dbt_package_file.py  test_dbt_package_lock_file.py  test_dbt_package_text_file.py  test_dbt_package_version.py  test_fusion_compatible_versions.py  test_package_hub_fusion_compatibility.py  test_package_upgrade.py  test_package_upgrade_with_lock_file.py  test_parse_conformance.py  test_update_package_hub_json.py  test_version_utils.py
(+128 files in other folders)
