

[tool.uv.workspace]
members = [
    "packages/test-package-1",
    "packages/test-package-2",
    "packages/dbt-autofix",
    "packages/dbt-fusion-package-tools",
]

[tool.uv.sources]
test-package-1 = { workspace = true }
test-package-2 = { workspace = true }
dbt-autofix = { workspace = true }
dbt-fusion-package-tools = { workspace = true }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "RUF", "PL", "TID", "T20"]
ignore = []


[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]


[tool.pyright]
include = [
    "packages/*",
    "tests",
]
exclude = []
pythonVersion = "3.9"

typeCheckingMode = "basic"
reportPrivateUsage = false
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedExpression = true
reportMissingImports = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR2004", "T201"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "packages"
]
testpaths = [
    "tests"
]

[tool.pydocstyle]
convention = "google"
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D103: Missing docstring in public function
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# D202: No blank lines allowed after function docstring
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D202"]
