[project]
name = "dbt-autofix"
description = "CLI to autofix deprecations in dbt projects"
readme = "README.md"
requires-python = ">=3.10, <3.14" # can't support 3.14 without mashumaro 3.15
dependencies = [
    "pyyaml>=6.0.2 ; python_version >= '3.13'", # need 6.0.2 for python 3.13 support
    "pyyaml>=6.0 ; python_version < '3.13'", # matches dbt-core
    "typer>=0.16.0",
    "yamllint>=1.37.0",
    "rich>=13.7.0",
    "click>=8.2.0,<9.0.0",
    "ruamel-yaml>=0.18.10,<0.18.15",
    "httpx>=0.27.0",
    "jinja2>=3.1.3,<4", # matches dbt-core: https://github.com/dbt-labs/dbt-core/blob/d1334866b1541d3b91e3ca36adcfbdf6c6c41059/core/pyproject.toml#L35
    "dbt-extractor>=0.5.0,<=0.6",
    "dbt-fusion-package-tools",
]

dynamic = ["version"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "packages/dbt_fusion_package_tools",
]

[tool.uv.sources]
dbt-fusion-package-tools = { workspace = true }

[project.scripts]
dbt-autofix = "dbt_autofix.main:app"


[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.2.0",
    "nox",
]

[tool.pdm.build]
# Include pre_commit_hooks/ directory in distribution
# To enable .pre-commit-hooks.yaml functionality
includes = ["src/dbt_autofix", "pre_commit_hooks", "packages/dbt_fusion_package_tools"]

[tool.pdm.version]
source = "scm"
version_format = "pdm_build:format_version"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "RUF", "PL", "TID", "T20", "D"]
ignore = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D202",     # No blank lines allowed after function docstring
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
]

[tool.pyright]
include = [
    "src/dbt_autofix",
    "tests",
]
exclude = []
pythonVersion = "3.10"

typeCheckingMode = "basic"
reportPrivateUsage = false
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedExpression = true
reportMissingImports = false

[tool.ruff.lint.per-file-ignores]
# Global patterns
"tests/**.py" = [
    "D205",     # 1 blank line required between summary line and description
    "PLR2004",  # Magic value used in comparison
    "T201",     # `print` found
    "T203",     # `pprint` found
]
"**/scripts/**.py" = [
    "T201",  # `print` found
    "T203",  # `pprint` found
]
# Baseline ignores for existing violations (to be fixed incrementally)
"noxfile.py" = ["D415"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/__init__.py" = ["T201"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/check_parse_conformance.py" = ["D417"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/dbt_package.py" = ["E722"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/dbt_package_version.py" = ["E711", "E722", "PLW1641"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/exceptions.py" = ["D415"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/package_example.py" = ["T201"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/scripts/conformance_output.py" = ["PLC0206", "PLR2004"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/scripts/get_fusion_compatible_versions.py" = ["E711"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/scripts/get_package_hub_files.py" = ["D205", "D417", "PLR2004"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/scripts/package_hub_fusion_compatibility.py" = ["D205", "PLR2004"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/upgrade_status.py" = ["D415"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/version_utils.py" = ["E721", "E722", "PLR2004", "PLW1641"]
"packages/dbt_fusion_package_tools/src/dbt_fusion_package_tools/yaml/loader.py" = ["D205"]
"pre_commit_hooks/check_deprecations.py" = ["D205", "D415"]
"src/dbt_autofix/dbt_api.py" = ["D415", "T201"]
"src/dbt_autofix/fields_properties_configs.py" = ["PLC0415"]
"src/dbt_autofix/jinja.py" = ["D205", "D301", "PLC0415", "RUF015"]
"src/dbt_autofix/main.py" = ["E722"]
"src/dbt_autofix/package_upgrade.py" = ["PLR1714", "T201"]
"src/dbt_autofix/packages/dbt_package_file.py" = ["D415", "E722", "PLC0206", "PLR1714"]
"src/dbt_autofix/packages/dbt_package_text_file.py" = ["PLR2004"]
"src/dbt_autofix/packages/installed_packages.py" = ["E721", "E722"]
"src/dbt_autofix/packages/package_hub_client.py" = ["D205"]
"src/dbt_autofix/refactor.py" = ["D415", "D417", "PLC0415", "PLR1722"]
"src/dbt_autofix/refactors/changesets/dbt_project_yml.py" = ["D415", "F841", "PLC0206"]
"src/dbt_autofix/refactors/changesets/dbt_schema_yml.py" = ["D205", "D415", "PLC0206", "PLR1714"]
"src/dbt_autofix/refactors/changesets/dbt_sql.py" = ["PLC0415"]
"src/dbt_autofix/refactors/changesets/dbt_sql_improved.py" = ["F841"]
"src/dbt_autofix/refactors/results.py" = ["D415", "T201"]
"src/dbt_autofix/refactors/yml.py" = ["D415"]
"src/dbt_autofix/semantic_definitions.py" = ["D415"]
"tests/unit_tests/package_upgrades/test_check_parse_conformance.py" = ["F841"]
"tests/unit_tests/package_upgrades/test_dbt_package_file.py" = ["E721"]
"tests/unit_tests/package_upgrades/test_dbt_package_version.py" = ["E712"]
"tests/unit_tests/package_upgrades/test_package_hub_fusion_compatibility.py" = ["F841"]
"tests/unit_tests/test_dict_config_subkeys.py" = ["D415"]
"tests/unit_tests/test_fix_space_after_plus.py" = ["D415"]
"tests/unit_tests/test_jinja.py" = ["PLC0415"]
"tests/unit_tests/test_rec_check_yaml_path.py" = ["D415"]
"tests/unit_tests/test_refactor.py" = ["D415", "E712"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "--ignore-glob=**/dbt_packages/**"

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
