[project]
name = "dbt-autofix"
description = "CLI to autofix deprecations in dbt projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "test-package-1",
    "pyyaml>=6.0.2",
    "typer>=0.15.2",
    "yamllint>=1.37.0",
    "rich>=13.7.0",
    "click<8.2.0",
    "ruamel-yaml>=0.18.10,<0.18.15",
    "httpx>=0.27.0",
    "dbt-common>=1.27,<2",
    "dbt-extractor>=0.5.0,<=0.6",
]

dynamic = ["version"]


[tool.uv]
package = true

[project.scripts]
main = "dbt_autofix.main:app"

[tool.pdm.build]
# Include pre_commit_hooks/ directory in distribution
# To enable .pre-commit-hooks.yaml functionality
includes = ["dbt_autofix", "pre_commit_hooks"]

[tool.pdm.version]
source = "scm"

[tool.uv.sources]
test-package-1 = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
